--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- This is a comment test -->
+    <!-- This is a comment test. Second test. -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
